v0.15.0/_sources/generated/statsmodels.discrete.count_model.ZeroInflatedNegativeBinomialP.rst.txt
statsmodels.discrete.count\_model.ZeroInflatedNegativeBinomialP
===============================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: ZeroInflatedNegativeBinomialP
   :exclude-members: cdf,cov_params_func_l1,fit,fit_regularized,from_formula,get_distribution,hessian,information,initialize,loglike,loglikeobs,pdf,predict,score,score_obs,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~ZeroInflatedNegativeBinomialP.cdf
      ~ZeroInflatedNegativeBinomialP.cov_params_func_l1
      ~ZeroInflatedNegativeBinomialP.fit
      ~ZeroInflatedNegativeBinomialP.fit_regularized
      ~ZeroInflatedNegativeBinomialP.from_formula
      ~ZeroInflatedNegativeBinomialP.get_distribution
      ~ZeroInflatedNegativeBinomialP.hessian
      ~ZeroInflatedNegativeBinomialP.information
      ~ZeroInflatedNegativeBinomialP.initialize
      ~ZeroInflatedNegativeBinomialP.loglike
      ~ZeroInflatedNegativeBinomialP.loglikeobs
      ~ZeroInflatedNegativeBinomialP.pdf
      ~ZeroInflatedNegativeBinomialP.predict
      ~ZeroInflatedNegativeBinomialP.score
      ~ZeroInflatedNegativeBinomialP.score_obs
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~ZeroInflatedNegativeBinomialP.endog_names
      ~ZeroInflatedNegativeBinomialP.exog_names
   
   
   